[project]
name = "mail-calendar-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain==0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai==2.1.10",
    "langgraph==0.6.7",
    "python-dotenv>=1.1.1",
    "redis>=7.0.1",
    "streamlit>=1.49.1",
]
